--- a/package.json
+++ b/package.json
@@ -24,6 +24,15 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "tailwindcss": "^1.6.0"
+        "@kugatsu/vuenotification": "^1.1.4",
+        "gsap": "^3.5.0",
+        "noty": "^3.2.0-beta",
+        "tailwindcss": "^1.6.0",
+        "vue-loading-overlay": "^3.3.3",
+        "vue-notification": "^1.3.20",
+        "vue-router": "^3.4.3",
+        "vue-snotify": "^3.2.1",
+        "vue-toast-notification": "^0.5.0",
+        "vuejs-noty": "^0.1.3"
     }
 }
