--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
         "gsap": "^3.5.0",
         "noty": "^3.2.0-beta",
         "tailwindcss": "^1.6.0",
+        "vue-button-spinner": "^2.2.1",
+        "vue-loading-button": "^0.2.0",
         "vue-loading-overlay": "^3.3.3",
         "vue-notification": "^1.3.20",
+        "vue-promise-btn": "^2.1.0",
         "vue-router": "^3.4.3",
         "vue-snotify": "^3.2.1",
+        "vue-tailwind-modal": "^1.0.2",
         "vue-toast-notification": "^0.5.0",
         "vuejs-noty": "^0.1.3"
     }
