--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     },
     "dependencies": {
         "@kugatsu/vuenotification": "^1.1.4",
+        "apexcharts": "^3.22.2",
         "gsap": "^3.5.0",
         "noty": "^3.2.0-beta",
         "tailwindcss": "^1.6.0",
+        "vue-apexcharts": "^1.6.0",
         "vue-button-spinner": "^2.2.1",
+        "vue-carousel-3d": "^1.0.1",
         "vue-loading-button": "^0.2.0",
         "vue-loading-overlay": "^3.3.3",
         "vue-notification": "^1.3.20",
